--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "blog",
   "version": "0.1.0",
@@ -38,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
